--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1375,6 +1375,15 @@ body.press .landing {
     display: none;
   }
 }
+@media screen and (max-width: 1280px) {
+  .landing .scrolldown {
+    position: fixed;
+    bottom: 0;
+    height: 5rem;
+    line-height: 5rem;
+    font-size: 1.1rem;
+  }
+}
 
 @media screen and (max-width: 480px) {
   .villas:not(.feed) .landing {
